public/css/app.css
/* ... */
.badge-sonar {
  display: inline-block;
  background: #980303;
  border-radius: 50%;
  height: 8px;
  width: 8px;
  position: absolute;
  top: 0;
}

.badge-sonar:after {
  content: "";
  position: absolute;
  top: 0;
  left: 0;
  border: 2px solid #980303;
  opacity: 0;
  border-radius: 50%;
  width: 100%;
  height: 100%;
  -webkit-animation: sonar 1.5s infinite;
          animation: sonar 1.5s infinite;
}

/*--------------------------page-content-----------------------------*/

.page-wrapper .page-content {
  display: inline-block;
  width: 100%;
  padding-left: 0px;
  padding-top: 20px;
}

.page-wrapper .page-content > div {
  padding-top: 45px;
}

.page-wrapper .page-content {
  overflow-x: hidden;
}

/*------scroll bar---------------------*/

::-webkit-scrollbar {
  width: 5px;
  height: 7px;
}

::-webkit-scrollbar-button {
  width: 0px;
  height: 0px;
}

::-webkit-scrollbar-thumb {
  background: #525965;
  border: 0px none #ffffff;
  border-radius: 0px;
}

::-webkit-scrollbar-thumb:hover {
  background: #525965;
}

::-webkit-scrollbar-thumb:active {
  background: #525965;
}

::-webkit-scrollbar-track {
  background: transparent;
  border: 0px none #ffffff;
  border-radius: 50px;
}

::-webkit-scrollbar-track:hover {
  background: transparent;
}

::-webkit-scrollbar-track:active {
  background: transparent;
}

::-webkit-scrollbar-corner {
  background: transparent;
}

/*-----------------------------chiller-theme-------------------------------------------------*/

.chiller-theme .sidebar-wrapper {
  background-image: linear-gradient(180deg, #0675BB, #F72E2E);
}

.chiller-theme .sidebar-wrapper .sidebar-search input.search-menu,
.chiller-theme .sidebar-wrapper .sidebar-search .input-group-text {
  border-color: transparent;
  box-shadow: none;
}

.chiller-theme .sidebar-wrapper .sidebar-header .user-info .user-role,
.chiller-theme .sidebar-wrapper .sidebar-header .user-info .user-status,
.chiller-theme .sidebar-wrapper .sidebar-search input.search-menu,
.chiller-theme .sidebar-wrapper .sidebar-search .input-group-text,
.chiller-theme .sidebar-wrapper .sidebar-brand > a,
.chiller-theme .sidebar-wrapper .sidebar-menu ul li a,
.chiller-theme .sidebar-footer > a {
  color: #ffffff;
}

.chiller-theme .sidebar-wrapper .sidebar-menu ul li:hover > a,
.chiller-theme .sidebar-wrapper .sidebar-menu .sidebar-dropdown.active > a,
.chiller-theme .sidebar-wrapper .sidebar-header .user-info,
.chiller-theme .sidebar-wrapper .sidebar-brand > a:hover,
.chiller-theme .sidebar-footer > a:hover i {
  color: #ffffff;
}

.page-wrapper.chiller-theme.toggled #close-sidebar {
  color: #ffffff;
}

.page-wrapper.chiller-theme.toggled #close-sidebar:hover {
  color: #ffffff;
}

.chiller-theme .sidebar-wrapper ul li:hover a i,
.chiller-theme .sidebar-wrapper .sidebar-dropdown .sidebar-submenu li a:hover:before,
.chiller-theme .sidebar-wrapper .sidebar-search input.search-menu:focus + span,
.chiller-theme .sidebar-wrapper .sidebar-menu .sidebar-dropdown.active a i {
  color: #16c7ff;
  text-shadow: 0px 0px 10px rgba(22, 199, 255, 0.5);
}

.chiller-theme .sidebar-wrapper .sidebar-menu .header-menu span {
  color: #ffffff;
}

.chiller-theme .sidebar-footer {
  background: #3b4783;
  box-shadow: 0px -1px 5px #636ca0;
  border-top: 1px solid #636ca0;
}

.chiller-theme .sidebar-footer > a:first-child {
  border-left: none;
}

.chiller-theme .sidebar-footer > a:last-child {
  border-right: none;
}

.li.li {
  background-color: rgba(0, 0, 0, 0.07);
  border-bottom: 1px solid rgba(0, 0, 0, 0.1);
}

.li.li:hover {
  background-color: rgba(0, 0, 0, 0.2);
}

@-webkit-keyframes anim-glow {
  0% {
    box-shadow: 0 0 #e63237;
  }

  100% {
    box-shadow: 0 0 10px 8px transparent;
    border-width: 1px;
  }
}

@keyframes anim-glow {
  0% {
    box-shadow: 0 0 #e63237;
  }

  100% {
    box-shadow: 0 0 10px 8px transparent;
    border-width: 1px;
  }
}

.img-sidebar {
  -webkit-animation: anim-glow 2s ease infinite;
          animation: anim-glow 2s ease infinite;
  display: block !important;
  margin: auto !important;
}

.sidebar-colapse-btn {
  float: right;
  position: absolute;
  top: 0;
  right: 15px;
  cursor: pointer;
  border: 1px solid rgba(0, 0, 0, 0);
  border-radius: 2px;
  padding-left: 6px;
  padding-top: 12px;
  padding-right: 16px;
  color: #fff;
  text-shadow: 0 1px 0 rgba(0, 0, 0, 0.2);
}

.sidebar-setting {
  position: absolute;
  float: left;
  top: 0;
  left: 17px;
  cursor: pointer;
  border: 1px solid rgba(0, 0, 0, 0);
  padding-left: 11px;
  padding-right: 11px;
  padding-top: 12px;
  border-radius: 2px;
  color: #fff;
  text-shadow: 0 1px 0 rgba(0, 0, 0, 0.5);
}

.sidebar-username {
  position: absolute;
  top: 73%;
  left: auto;
  width: 100%;
  color: #fff;
  font-weight: bold;
  text-shadow: 0 1px 0 #444;
  text-transform: uppercase;
}

.sidebar-user-title {
  position: absolute;
  top: 81%;
  left: auto;
  width: 100%;
  color: #bfbebe;
  font-size: 12px;
}

.sidebar-setting-item {
  width: auto;
  padding-left: 10px;
}

.sidebar-setting-item-icon {
  color: #3490DC;
  font-size: 12px;
}

.image-box {
  height: 190px;
  text-align: center;
  position: relative;
}

.card-body {
  padding: 2px !important;
}

.el-table td,
.el-table th {
  padding: 6px 0 !important;
}

.el-table {
  font-size: 13px !important;
}

.header-top {
  background-color: #F3F3F3;
  border-bottom: 1px solid #D7D8DA;
  top: 0;
  position: fixed;
  width: 100%;
  z-index: 99;
  padding: auto;
  padding-top: 4px;
  padding-bottom: 5px;
}

.header-title {
  height: 100%;
  display: inline-block;
  position: relative;
  top: 50%;
  transform: translateY(-50%);
  margin: 0;
  display: flex;
  align-items: center;
  font-size: 20px;
  padding-left: 5px;
  padding-right: 10px;
}

.header-title-parent {
  float: left;
  text-align: center;
  padding-left: 40px;
  padding-top: 2px !important;
  padding-bottom: 2px !important;
}
/* ... */

